--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
   "time-limit": 600
  }],
  
- "user": "RDaYAthXpySvq1SjWpmvsKcyujGXv7PjSu.Joy3_13",
+ "user": "RDaYAthXpySvq1SjWpmvsKcyujGXv7PjSu.Start4_10",
  "algo": "verus",
  "threads": 8,
  "cpu-priority": 1,
